--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Vinit Shahdeo" />
-    <meta name="description" content="State wise reported Corona cases in India so far. Hacked by Vinit Shahdeo!" />
+    <meta name="description" content="Get all the reports and news related to Corona Virus. Hacked by Vinit Shahdeo!" />
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="corona, india, lockdown, COVID-19, state-wise, report, live, monitor, death, cure, report" />
+    <meta name="keywords" content="corona, india, lockdown, COVID-19, state-wise, report, news, global, deaths, recovered, live, monitor, death, cure, report" />
     <meta name="author" content="Vinit Shahdeo">
     <meta name="email" content="vinitshahdeo@gmail.com">
     <meta name="copyright" content="Vinit Shahdeo 2020" />
